# tangent_bug_pmr

./: CMakeLists.txt  README.md  package.xml
config/: bridge.yaml  config.rviz  control.yaml
description/create3/: create3.urdf.xacro  create3_base.urdf.xacro
description/scout_mini/: model.sdf
description/scout_mini/meshes/: pan.dae  tilt.dae
include/pmr_tp1/: visualizer.hpp
launch/: control_create3.launch.py  create3.launch.py  parametric_curve.launch.py  path_with_potential.launch.py  potential_function.launch.py  rviz_map.launch.py  scout_mini_sdf.launch.py  sim_create3.launch.py  spawn_create3.launch.py  tangent_bug.launch.py
launch/include/: control_create3.launch.py  rviz_map.launch.py  sim_create3.launch.py  spawn_create3.launch.py
maps/: bug_map.pgm  bug_map.yaml  empty_map.pgm  empty_map.yaml
rviz/: bug.rviz  curve.rviz  path_with_potential.rviz
src/: parametric_curve.cpp  path_with_potential.cpp  potential_function.cpp  tangent_bug.cpp
worlds/: bug_map.sdf  empty.sdf  test_map.sdf
worlds/meshes/: bug_map.stl
