<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tangent_bug_pmr</name>
  <version>0.0.0</version>
  <description>Simple tangent bug implementation for differential drive robot</description>
  <maintainer email="theofonsecacruz@gmail.com">Theo Cruz</maintainer>
  <maintainer email="nikolasbarbosaextras@gmail.com">Nikolas Barbosa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>irobot_create_description</exec_depend>
  <exec_depend>irobot_create_control</exec_depend>
  <exec_depend>twist_stamper</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
